# greenwood-clock

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
components/fonts/: CMakeLists.txt
components/fonts/c_array/: wg_sunrise_128.c  wg_sunrise_256.c  wg_sunrise_32.c
components/images/: CMakeLists.txt  image_converter.py
main/: CMakeLists.txt  idf_component.yml  main.cpp
